[#146] - External sign-in provider: OpenID Connect (#179)
